# Webtoon-universal

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: build-windows.yml  ci.yml
assets/fonts/: fonts.json
packaging/: cli_entry.py  webtoon_translator.spec
scripts/: make_sample_strip.py  run_pipeline_cli.py
src/webtoon_translator/: app.py  cli.py  paths.py  settings.py
src/webtoon_translator/core/: device.py  glossary.py  models.py  project_io.py
src/webtoon_translator/download/: manager.py  manifest.py
src/webtoon_translator/gui/: main_window.py  workers.py
src/webtoon_translator/gui/dialogs/: settings_dialog.py
src/webtoon_translator/gui/widgets/: canvas.py  glossary_editor.py  page_list.py  progress_dialog.py  region_editor.py
src/webtoon_translator/pipeline/: detector.py  export.py  inpaint.py  ocr.py  pipeline.py  translator.py  typeset.py
tests/: test_download_manager.py  test_inpaint_logic.py  test_project_io.py  test_tiling.py  test_translator.py  test_typeset.py
