[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "webtoon-translator"
version = "0.1.0"
description = "Webtoon/comic translation desktop app: detection, OCR, inpainting, translation, typesetting"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = [
    "torch>=2.6",
    "torchvision>=0.21",
    "transformers>=5.0,<6",
    "huggingface_hub>=0.30",
    "onnxruntime>=1.20",
    "PySide6>=6.7",
    "Pillow>=10.4",
    "opencv-python-headless>=4.10",
    "numpy>=1.26,<3",
    "httpx>=0.27",
    "platformdirs>=4",
    "pythainlp>=5",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6", "respx>=0.21"]

[project.gui-scripts]
webtoon-translator = "webtoon_translator.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["slow: tests that download/run real models"]
addopts = "-m 'not slow'"
